--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/sitemap": "^1.0.1",
     "@unocss/astro": "^0.49.7",
     "astro": "^2.0.14",
+    "gh-pages": "^5.0.0",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
