--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "type": "module",
   "author": {
-    "name": "umair abbas",
-    "email": "uamir4138@gmail.com",
+    "name": "umairabbasDev",
+    "email": "uamirabbas391@gmail.com",
     "url": "https://www.test.com"
   },
   "homepage": "https://text.com",
@@ -13,7 +13,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/image": "^0.15.0",
@@ -21,7 +22,6 @@
     "@astrojs/sitemap": "^1.0.1",
     "@unocss/astro": "^0.49.7",
     "astro": "^2.0.14",
-    "gh-pages": "^5.0.0",
     "sharp": "^0.31.3"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "eslint": "^8.34.0",
     "eslint-plugin-astro": "^0.23.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0"
   }
